# mintmpl

./: .gitignore  README.md  go.mod  go.sum
.github/workflows/: releases.yaml
cmd/mintmpl/: main.go
copier-test-project/: .gitignore  .mintmpl.yml  package.json  setup.py
copier-test-project/examples/: basic_usage.py
copier-test-project/src/mypackage/: __init__.py  config.py  core.py  core_async.py  utils.py
copier-test-project/tests/: __init__.py  test_core.py  test_utils.py
extras/: README.md  mintmpl-spec-generator.yaml
internal/languages/: languages.go
internal/spec/: spec.go
internal/transformer/: transformer.go
test-nuget-output/instantiated/: .editorconfig  .gitignore  Directory.Build.props  MyLibrary.sln  README.md  stylecop.json
test-nuget-output/instantiated/examples/ConsoleApp/: ConsoleApp.csproj  Program.cs
test-nuget-output/instantiated/src/MyLibrary/: MyLibrary.csproj  ServiceClient.cs
test-nuget-output/instantiated/tests/MyLibrary.Tests/: ConfigurationTests.cs  (+3 more)
test-nuget-output/template/: copier.yaml
test-nuget-output/template/template/: Directory.Analyzers.props  Directory.Build.props.jinja  LICENSE.jinja  MyLibrary.sln.jinja  README.md.jinja  stylecop.json.jinja
test-output/: copier.yaml
test-output/template/: README.md  package.json.jinja  pyproject.toml  setup.py.jinja
test-output/template/examples/: basic_usage.py.jinja
test-output/template/src/mypackage/: __init__.py.jinja  config.py.jinja  core.py.jinja  core_async.py.jinja  utils.py.jinja
test-output/template/tests/: test_core.py.jinja  test_utils.py.jinja
(+12 files in other folders)
